--- a/_posts/2023-02-14-crash-bug.md
+++ b/_posts/2023-02-14-crash-bug.md
@@ -11,7 +11,7 @@ Since this is my first post here, I figured I'd start strong.
 
 Not too long ago, I was designing an [intermediate to advanced formula practice sheet](https://docs.google.com/spreadsheets/d/1RZVTUJj_qzugq_WCd7rMjmjzKtUM72Jb5x0RGFAVNnk/edit#gid=890374412) when I accidentally hit enter on one of the formulae intended to generate test data. (I'll probably make some posts on the formula practice sheet later.) It immediately crashed the sheet, and would continuously spit out the following:
 
-![Screenshot of Bug]({{ site.baseurl }}/assets/images/crashbug1.jpg)
+![Screenshot of Bug]({{ site.baseurl }}/assets/images/crashbug1.png)
 
 So clearly, something went pretty horribly wrong. It completely bricked the workbook, but for some reason it still let me access it through iOS sheets so I was able to salvage it.
 
@@ -49,7 +49,7 @@ Further along in my testing, I was able to induce a state where I was able to ed
 
 It was at this point I shared what information I had with some of the lovely folks over on the [Spreadsheets Discord Community](https://discord.gg/M9GKpPd). One person in particular, [Elly](https://www.reddit.com/user/Keipaws), was instrumental in determining the cause of this issue. After playing around with it for a while, they sent me this:
 
-![Screenshot of Console]({{ site.baseurl }}/assets/images/crashbug1.jpg)
+![Screenshot of Console]({{ site.baseurl }}/assets/images/crashbug1.png)
 
 I couldn't believe I hadn't thought to look at the console! Lo and behold, we have the exact cause of the fatal error. It seems like searchArrayOrRef, a backend function used in INDEX, is not compatible with new data types that result from LAMBDA.
 
